front end eklendi ve iki giriş yapıldı arka plan ve logo eklendi album id zorunluluğu ortadan kalktı